src/objects/System_Design_Item__c.object
<CustomObject>
    <description>AstrumCRM/AstrumPM - System Design Item.  A collection of one or more System Design Products that are to be placed on a single Install Location.</description>
    <fields>
        <fullName>Annual_Solar_Access__c</fullName>
        <label>Annual Solar Access</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apr_Solar_Access__c</fullName>
        <formula>Install_Location__r.Apr_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Astrum_Balance_of_System_Derate_Text__c</fullName>
        <label>Astrum Balance of System Derate Text</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_Balance_of_System_Derate__c</fullName>
        <formula>IF(System_Design_Array__r.System_Design__r.Astrum_Balance_of_System_Derate__c &gt; 0 ,System_Design_Array__r.System_Design__r.Astrum_Balance_of_System_Derate__c,$Setup.System_Derate_Defaults__c.Astrum_Balance_of_System_Derate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Astrum Balance of System Derate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_PV_Watts_Derate_Text__c</fullName>
        <label>Astrum PV Watts Derate Text</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_PV_Watts_Derate__c</fullName>
        <formula>Astrum_Balance_of_System_Derate__c *  Inverter_and_Transformer_Efficiency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Astrum PV Watts Derate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_PV_Watts_Optimal_Site_Quality__c</fullName>
        <label>Astrum PV Watts Optimal Site Quality</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_PV_Watts_Site_Quality__c</fullName>
        <label>Astrum PV Watts Site Quality</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_Projected_Annual_Output_kWh_y__c</fullName>
        <formula>IF(  Legacy_Astrum_Site_Quality__c ,  Projected_Annual_Output_kWh_y__c , Astrum_PV_Watts_Site_Quality__c *  Rated_Output_kW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Astrum Projected Annual Output (kWh/y)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Solar_Access__c</fullName>
        <formula>Install_Location__r.Aug_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Azimuth_Text__c</fullName>
        <label>Azimuth Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Azimuth__c</fullName>
        <formula>ROUND( Panel_Azimuth__c / 5,0) * 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Azimuth Sent to CPF - Rounded to nearest 5</inlineHelpText>
        <label>CPF Azimuth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPRE_Azimuth__c</fullName>
        <formula>IF( Panel_Azimuth__c &lt;= 180 , Panel_Azimuth__c  + 180 ,Panel_Azimuth__c - 180)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPRE Azimuth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Optimizer_Efficiency__c</fullName>
        <formula>System_Design_Product__r.DC_Optimizer_Efficiency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Optimizer Efficiency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Solar_Access__c</fullName>
        <formula>Install_Location__r.Dec_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_TSRF__c</fullName>
        <description>Calculated TSRF at the mounted panel pitch.</description>
        <formula>TSRF_Adjustment__c  +  Install_Location__r.TSRF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective TSRF</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Feb_Solar_Access__c</fullName>
        <formula>Install_Location__r.Feb_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ground_Mount__c</fullName>
        <formula>System_Design_Product__r.Ground_Mount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ground Mount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Install Location</label>
        <referenceTo>Install_Location__c</referenceTo>
        <relationshipLabel>System Design Items</relationshipLabel>
        <relationshipName>System_Design_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_CEC_Efficiency__c</fullName>
        <formula>System_Design_Product__r.Inverter_CEC_Efficiency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter CEC Efficiency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Rating_W__c</fullName>
        <formula>if(RecordType.Name = &apos;Inverter&apos;, System_Design_Product__r.Rated_Output_W__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Rating (W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Transformer_Efficiency_Text__c</fullName>
        <label>Inverter/Transformer Efficiency Text</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_and_Transformer_Efficiency__c</fullName>
        <formula>System_Design_Array__r.Inverter_and_Transformer_Efficiency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter and Transformer Efficiency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Solar_Access__c</fullName>
        <formula>Install_Location__r.Jan_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Jul_Solar_Access__c</fullName>
        <formula>Install_Location__r.Jul_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Jun_Solar_Access__c</fullName>
        <formula>Install_Location__r.Jun_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Legacy_Astrum_Site_Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Astrum Site Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Pitch__c</fullName>
        <description>Pitch of Install Location (Retrieved Automatically)</description>
        <inlineHelpText>Pitch of Install Location (Retrieved Automatically)</inlineHelpText>
        <label>Location Pitch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Stories__c</fullName>
        <description>Number Of Stories Of Install Location (Retrieved Automatically)</description>
        <inlineHelpText>Number of Stories Of Install Location (Retrieved Automatically)</inlineHelpText>
        <label>Location Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>For use by the SDWR</description>
        <formula>Install_Location__r.Location__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_has_Tree_Removal__c</fullName>
        <formula>if( RecordType.DeveloperName = &apos;Panel&apos; &amp;&amp; Quantity__c &gt; 0 &amp;&amp; Install_Location__r.Survey__r.Tree_Removal__c = true, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location has Tree Removal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <description>Make</description>
        <formula>System_Design_Product__r.Make__c</formula>
        <inlineHelpText>Make</inlineHelpText>
        <label>Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mar_Solar_Access__c</fullName>
        <formula>Install_Location__r.Mar_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mar Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MasterSD__c</fullName>
        <formula>System_Design_Array__r.System_Design__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MasterSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>May_Solar_Access__c</fullName>
        <formula>Install_Location__r.May_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Flat_SQ__c</fullName>
        <label>Method 1 Apr Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Flat_kwh__c</fullName>
        <formula>Method_1_Apr_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Apr Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Off_Peak_SQ__c</fullName>
        <label>Method 1 Apr Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Apr_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Apr Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Part_Peak_SQ__c</fullName>
        <label>Method 1 Apr Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Apr_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Apr Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Peak_SQ__c</fullName>
        <label>Method 1 Apr Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Peak_kwh__c</fullName>
        <formula>Method_1_Apr_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Apr Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Flat_SQ__c</fullName>
        <label>Method 1 Aug Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Flat_kwh__c</fullName>
        <formula>Method_1_Aug_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Aug Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Off_Peak_SQ__c</fullName>
        <label>Method 1 Aug Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Aug_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Aug Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Part_Peak_SQ__c</fullName>
        <label>Method 1 Aug Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Aug_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Aug Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Peak_SQ__c</fullName>
        <label>Method 1 Aug Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Peak_kwh__c</fullName>
        <formula>Method_1_Aug_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Aug Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Flat_SQ__c</fullName>
        <label>Method 1 Dec Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Flat_kwh__c</fullName>
        <formula>Method_1_Dec_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Dec Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Off_Peak_SQ__c</fullName>
        <label>Method 1 Dec Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Dec_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Dec Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Part_Peak_SQ__c</fullName>
        <label>Method 1 Dec Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Dec_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Dec Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Peak_SQ__c</fullName>
        <label>Method 1 Dec Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Peak_kwh__c</fullName>
        <formula>Method_1_Dec_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Dec Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Flat_SQ__c</fullName>
        <label>Method 1 Feb Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Flat_kwh__c</fullName>
        <formula>Method_1_Feb_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Feb Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Off_Peak_SQ__c</fullName>
        <label>Method 1 Feb Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Feb_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Feb Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Part_Peak_SQ__c</fullName>
        <label>Method 1 Feb Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Feb_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Feb Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Peak_SQ__c</fullName>
        <label>Method 1 Feb Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Peak_kwh__c</fullName>
        <formula>Method_1_Feb_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Feb Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Flat_SQ__c</fullName>
        <label>Method 1 Jan Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Flat_kwh__c</fullName>
        <formula>Method_1_Jan_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jan Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Off_Peak_SQ__c</fullName>
        <label>Method 1 Jan Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Jan_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jan Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Part_Peak_SQ__c</fullName>
        <label>Method 1 Jan Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Jan_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jan Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Peak_SQ__c</fullName>
        <label>Method 1 Jan Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Peak_kwh__c</fullName>
        <formula>Method_1_Jan_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jan Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Flat_SQ__c</fullName>
        <label>Method 1 Jul Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Flat_kwh__c</fullName>
        <formula>Method_1_Jul_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jul Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Off_Peak_SQ__c</fullName>
        <label>Method 1 Jul Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Jul_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jul Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Part_Peak_SQ__c</fullName>
        <label>Method 1 Jul Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Jul_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jul Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Peak_SQ__c</fullName>
        <label>Method 1 Jul Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Peak_kwh__c</fullName>
        <formula>Method_1_Jul_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jul Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Flat_SQ__c</fullName>
        <label>Method 1 Jun Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Flat_kwh__c</fullName>
        <formula>Method_1_Jun_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jun Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Off_Peak_SQ__c</fullName>
        <label>Method 1 Jun Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Jun_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jun Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Part_Peak_SQ__c</fullName>
        <label>Method 1 Jun Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Jun_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jun Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Peak_SQ__c</fullName>
        <label>Method 1 Jun Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Peak_kwh__c</fullName>
        <formula>Method_1_Jun_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Jun Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Flat_SQ__c</fullName>
        <label>Method 1 Mar Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Flat_kwh__c</fullName>
        <formula>Method_1_Mar_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Mar Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Off_Peak_SQ__c</fullName>
        <label>Method 1 Mar Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Mar_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Mar Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Part_Peak_SQ__c</fullName>
        <label>Method 1 Mar Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Mar_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Mar Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Peak_SQ__c</fullName>
        <label>Method 1 Mar Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Peak_kwh__c</fullName>
        <formula>Method_1_Mar_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Mar Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Flat_SQ__c</fullName>
        <label>Method 1 May Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Flat_kwh__c</fullName>
        <formula>Method_1_May_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 May Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Off_Peak_SQ__c</fullName>
        <label>Method 1 May Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Off_Peak_kwh__c</fullName>
        <formula>Method_1_May_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 May Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Part_Peak_SQ__c</fullName>
        <label>Method 1 May Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Part_Peak_kwh__c</fullName>
        <formula>Method_1_May_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 May Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Peak_SQ__c</fullName>
        <label>Method 1 May Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Peak_kwh__c</fullName>
        <formula>Method_1_May_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 May Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Flat_SQ__c</fullName>
        <label>Method 1 Nov Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Flat_kwh__c</fullName>
        <formula>Method_1_Nov_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Nov Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Off_Peak_SQ__c</fullName>
        <label>Method 1 Nov Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Nov_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Nov Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Part_Peak_SQ__c</fullName>
        <label>Method 1 Nov Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Nov_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Nov Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Peak_SQ__c</fullName>
        <label>Method 1 Nov Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Peak_kwh__c</fullName>
        <formula>Method_1_Nov_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Nov Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Flat_SQ__c</fullName>
        <label>Method 1 Oct Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Flat_kwh__c</fullName>
        <formula>Method_1_Oct_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Oct Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>